--- a/test1.ipynb
+++ b/test1.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x73abac975a10>]"
+       "[<matplotlib.lines.Line2D at 0x7a3afc410250>]"
       ]
      },
      "execution_count": 1,
@@ -31,7 +31,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "x, y = np.linspace(0,1,100), np.linspace(3,5,100)\n",
-    "plt.plot(x, y)"
+    "plt.plot(x, y)\n",
+    "xx = x*y\n",
+    "\n"
    ]
   },
   {
